<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ctadmin.man.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/m"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_weight="0.06"
            android:scaleType="centerCrop"
            android:src="@drawable/brass" />


        <RadioGroup
            android:id="@+id/r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/i"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/m1" />

            <RadioButton
                android:id="@+id/i1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m2" />

            <RadioButton
                android:id="@+id/i2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m3" />

            <RadioButton
                android:id="@+id/i3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m4" />


        </RadioGroup>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m5"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photo_image_view2"
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:layout_weight="0.07"
            android:scaleType="centerCrop"
            android:src="@drawable/nonmetals" />

        <RadioGroup
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/p"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/m6" />

            <RadioButton
                android:id="@+id/p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m7" />

            <RadioButton
                android:id="@+id/p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m8" />

            <RadioButton
                android:id="@+id/p3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m9" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m10"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photo_image_view3"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_weight="0.09"
            android:scaleType="centerCrop"
            android:src="@drawable/chlorophyll" />

        <RadioGroup
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/m11" />

            <RadioButton
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m12" />

            <RadioButton
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m13" />

            <RadioButton
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m14" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m15"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photo_image_view4"
            android:layout_width="match_parent"
            android:layout_height="167dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pencil" />


        <RadioGroup
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/o"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/m16" />

            <RadioButton
                android:id="@+id/o1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m17" />

            <RadioButton
                android:id="@+id/o2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m18" />

            <RadioButton
                android:id="@+id/o3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m19" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m20"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photo_image_view5"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:layout_weight="0.05"
            android:scaleType="centerCrop"
            android:src="@drawable/amalgam" />

        <RadioGroup
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/u"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/m21" />

            <RadioButton
                android:id="@+id/u1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m22" />

            <RadioButton
                android:id="@+id/u2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m23" />

            <RadioButton
                android:id="@+id/u3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m24" />

        </RadioGroup>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>
